# tpu-preflight

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: check_performance.rs
docs/: ai-integration.md  architecture.md  checks.md  ci-integration.md  commands.md  configuration.md  development.md
src/: lib.rs  main.rs  version.rs
src/ai/: anthropic.rs  client.rs  google.rs  mod.rs  prompt.rs
src/checks/: config.rs  hardware.rs  io.rs  mod.rs  performance.rs  security.rs  stack.rs
src/cli/: args.rs  mod.rs  output.rs
src/commands/: analyze.rs  audit.rs  cache.rs  info.rs  mod.rs  snapshot.rs  stack.rs
src/data/: compatibility.rs  mod.rs  specs.rs
src/engine/: mod.rs  orchestrator.rs  result.rs
src/platform/: gcp.rs  linux.rs  mod.rs  network.rs  tpu.rs
tests/: tests.rs
tests/integration/: cli_tests.rs  full_run_tests.rs  mod.rs  output_tests.rs
tests/mocks/: mod.rs  platform.rs
