[package]
name = "tpu-preflight"
version = "0.1.0"
edition = "2021"
authors = []
description = "Pre-deployment validation tool for Google Cloud TPU environments"
repository = "https://github.com/clay-good/tpu-preflight"
license = "MIT"
keywords = ["tpu", "validation", "gcp", "inference", "mlops"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "tpu-preflight"
path = "src/main.rs"

[lib]
name = "tpu_preflight"
path = "src/lib.rs"

[dependencies]
# Zero external dependencies - all functionality implemented manually

[dev-dependencies]
# Testing dependencies will be added as needed

[features]
default = ["json", "junit"]
json = []
junit = []
full = ["json", "junit"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "check_performance"
harness = false
