[package]
name = "tpu-doc"
version = "0.1.0"
edition = "2021"
authors = []
description = "TPU environment diagnostics, discovery, and troubleshooting"
repository = "https://github.com/clay-good/tpu-doc"
license = "MIT"
keywords = ["tpu", "gcp", "diagnostics", "validation"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "tpu-doc"
path = "src/main.rs"

[lib]
name = "tpu_doc"
path = "src/lib.rs"

[dependencies]
# Zero external dependencies for core binary - all functionality implemented manually
# TLS support for AI feature (optional)
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
# Testing dependencies will be added as needed

[features]
default = ["json", "junit"]
json = []
junit = []
full = ["json", "junit", "ai"]
ai = ["rustls", "webpki-roots"]  # Optional AI integration feature with TLS support

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
